* Add possibility to build manually selected list of static libraries in
  environments with shared libraries. See STATIC_PKG_LIST in settings.sh.
* Add USE_JPEG_TURBO variable to all configs: set it to "true" for using of
  libjpeg-turbo library instead of jpeg library.
* Add update-checksums-database.sh tool.
* Add patch to fix installation of shared library from package mxml.
* Build package ffmpeg with x264 support.
* Update cmake toolchain file generated by package cmake-settings.
* Update in all configs:
  - QT5_VER from 5.10.0 to 5.10.1 (except AstraLinux 1.2)
  - SDL2_VER from 2.0.7 to 2.0.8 (except AstraLinux 1.2)
  - PROJ_VER from 4.9.3 to 4.9.3 (except AstraLinux 1.2)

--- v3.0 (2018-02-01) ---
* Add checkup of checksums for all tarballs with sources. Only size of tarballs
  was checked before.
* Add new packages: curl, tinyxml2, osgearth, freetype-stage1, harfbuzz.
* Add CheckPkgUrl() function which checks availability of tarball with library
  sources using primary and reserve URLs (PKG_URL and PKG_URL_2 accordingly).
* Use PKG_URL_2 variable for packages: openssl and libpng.
  (These projects often move tarballs into archive.)
* Use HTTPS instead of HTTP in all PKG_URLs where it is possible.
* Improve notifications during build of packages.
* Simplify usage of *.patch files: apply them directly from UnpackSources()
  function instead of forcing of usage of additional scripts (see *-patches.sh).
* Simplify GetSources() function: do not check the size of tarballs because
  the checkup of checksum should be enough.
* Simplify function for `make clean`: now it is just removes whole subdirectory
  "dist/" instead of alternate deleting of "dist/${CONFIG}" subdirectories.
* Packages qtbase and freetype (optionally) depend on package harfbuzz now.
* Update in all configs:
  - GCC_EXTRA_VER from 7.1.0 to 6.4.0
  - PROTOBUF_VER from 3.3.0 to 3.4.0
  - FFMPEG_VER from 3.3.2 to 3.4.1
  - MXML_VER from 2.10 to 2.11
  - BOOST_VER from 1.64.0 to 1.65.0