@@ -11,7 +11,7 @@
     PKG_SUBDIR_ORIG=SDL2-${PKG_VERSION}
     PKG_FILE=${PKG_SUBDIR_ORIG}.tar.gz
     PKG_URL="https://www.libsdl.org/release/${PKG_FILE}"
-    PKG_DEPS="gcc"
+    PKG_DEPS="gcc cmake-settings"
     [ ! -z "${GCC_EXTRA_VER}" ] && PKG_DEPS="${PKG_DEPS} gcc-extra"
 
     if ! IsPkgInstalled
@@ -24,10 +24,13 @@
 
         SetBuildFlags "${GCC_EXTRA_VER}"
         UpdateGCCSymlinks "${GCC_EXTRA_VER}"
+        UpdateCmakeSymlink "${GCC_EXTRA_VER}"
         SetCrossToolchainVariables "${GCC_EXTRA_VER}"
         SetCrossToolchainPath
-        ConfigureAutotoolsProject \
-            --disable-rpath
+        # unset CFLAGS CPPFLAGS CXXFLAGS LDFLAGS
+        ConfigureCmakeProject \
+            -DSDL_SHARED="${CMAKE_SHARED_BOOL}" \
+            -DSDL_STATIC="${CMAKE_STATIC_BOOL}"
 
         BuildPkg -j ${JOBS}
         InstallPkg install
@@ -36,6 +39,7 @@
         CleanPkgSrcDir
 
         UpdateGCCSymlinks
+        UpdateCmakeSymlink
 
         cd "${PREFIX}/bin/"
         ln -sf "${SYSROOT}/usr/bin/${PKG}-config" "${TARGET}-${PKG}-config"
