@@ -6,6 +6,7 @@
   libjpeg-turbo library instead of jpeg library.
 * Add update-checksums-database.sh tool.
 * Add patch to fix installation of shared library from package mxml.
+* Switch package sdl2 from autotools to cmake.
 * Build package ffmpeg with x264 support.
 * Update cmake toolchain file generated by package cmake-settings.
 * Update in all configs:
